--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,13 +16,13 @@ jobs:
         uses: actions/checkout@v2
 
       # may have to espacify node version
-      - name: Setup Node.js environment
-        uses: actions/setup-node@v2
-        with:
-          node-version: ${{ env.NODE_VERSION }}
+      # - name: Setup Node.js environment
+      #   uses: actions/setup-node@v2
+      #   with:
+      #     node-version: ${{ env.NODE_VERSION }}
 
       - name: Install dependencies
-        run: pnpm install
+        run: pnpm add
 
       - name: Run TypeScript type checking
         run: pnpm run typecheck
