--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,11 +1,12 @@
-name: CI
+name: Node.js CI
 
-on: [push, pull_request]
-
-env: # Define environment variables here
-  # NODE_VERSION: 20
-  # PNPM_VERSION: 6 # Replace with the version of pnpm you want to use
-  DATABASE_URL: http://database.url
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
   build:
@@ -15,20 +16,25 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      # may have to espacify node version
-      # - name: Setup Node.js environment
-      #   uses: actions/setup-node@v2
-      #   with:
-      #     node-version: ${{ env.NODE_VERSION }}
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '14.x'
+
+      - name: Install pnpm
+        run: npm install -g pnpm
 
       - name: Install dependencies
-        run: pnpm i
+        run: pnpm install
 
-      - name: Run TypeScript type checking
+      - name: Set up environment variables
+        run: echo "MY_ENV_VARIABLE=your_value" >> .env.local
+        env:
+          MY_ENV_VARIABLE: your_value
+          ANOTHER_ENV_VARIABLE: another_value
+
+      - name: Type checking
         run: pnpm run typecheck
 
-      - name: Run linting
+      - name: Linting
         run: pnpm run lint
-
-      - name: Log Node.js version
-        run: echo $NODE_VERSION
