--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,6 +2,11 @@ name: CI
 
 on: [push, pull_request]
 
+env: # Define environment variables here
+  # NODE_VERSION: 20
+  # PNPM_VERSION: 6 # Replace with the version of pnpm you want to use
+  DATABASE_URL: http://database.url
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -22,10 +27,7 @@ jobs:
         run: pnpm install
 
       - name: Set up environment variables
-        run: echo "MY_ENV_VARIABLE=your_value" >> .env.local
-        env:
-          MY_ENV_VARIABLE: your_value
-          ANOTHER_ENV_VARIABLE: another_value
+        run: echo ${{ env.DATABASE_URL }} >> .env.local
 
       - name: Type checking
         run: pnpm run typecheck
