--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,6 +2,9 @@ name: CI
 
 on: [push, pull_request]
 
+env:
+  DATABASE_URL: http://database.url
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -10,11 +13,6 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      # - name: Setup Node.js
-      #   uses: actions/setup-node@v2
-      #   with:
-      #     node-version: '14.x'
-
       - name: Install pnpm
         run: npm install -g pnpm
 
@@ -22,10 +20,7 @@ jobs:
         run: pnpm install
 
       - name: Set up environment variables
-        run: echo "MY_ENV_VARIABLE=your_value" >> .env.local
-        env:
-          MY_ENV_VARIABLE: your_value
-          ANOTHER_ENV_VARIABLE: another_value
+        run: echo ${{ env.DATABASE_URL }} >> .env.local
 
       - name: Type checking
         run: pnpm run typecheck
