--- a/package.json
+++ b/package.json
@@ -7,14 +7,18 @@
     "start": "next start",
     "build": "next build",
     "lint": "next lint",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "update-envs": "vercel env pull .env.development.local",
+    "db:generate": "drizzle-kit generate:pg "
   },
   "dependencies": {
     "@clerk/nextjs": "^4.23.1",
     "@types/node": "20.4.5",
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
+    "@vercel/postgres": "^0.4.1",
     "autoprefixer": "10.4.14",
+    "drizzle-orm": "^0.27.2",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
     "eslint-plugin-simple-import-sort": "^10.0.0",
@@ -27,6 +31,7 @@
     "typescript": "5.1.6"
   },
   "devDependencies": {
+    "drizzle-kit": "^0.19.12",
     "prettier": "^3.0.0",
     "prettier-plugin-tailwindcss": "^0.4.1"
   }
