--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
     "@types/react-dom": "18.2.7",
     "@vercel/postgres": "^0.4.1",
     "autoprefixer": "10.4.14",
+    "aws-cdk": "^2.89.0",
+    "aws-sdk": "^2.1428.0",
     "dotenv": "^16.3.1",
     "drizzle-orm": "^0.27.2",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "multer": "1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "next": "13.4.12",
     "postcss": "8.4.27",
     "react": "18.2.0",
