--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "db:generate": "drizzle-kit generate:pg "
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.383.0",
+    "@aws-sdk/lib-storage": "^3.383.0",
     "@clerk/nextjs": "^4.23.1",
     "@types/node": "20.4.5",
     "@types/react": "18.2.18",
@@ -20,6 +22,7 @@
     "autoprefixer": "10.4.14",
     "aws-cdk": "^2.89.0",
     "aws-sdk": "^2.1428.0",
+    "aws-sdk-js-codemod": "^0.17.2",
     "dotenv": "^16.3.1",
     "drizzle-orm": "^0.27.2",
     "eslint": "8.46.0",
