--- a/package.json
+++ b/package.json
@@ -28,8 +28,7 @@
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
     "eslint-plugin-simple-import-sort": "^10.0.0",
-    "multer": "1.4.5-lts.1",
-    "multer-s3": "^3.0.1",
+    "nanoid": "^4.0.2",
     "next": "13.4.12",
     "postcss": "8.4.27",
     "react": "18.2.0",
