--- a/package.json
+++ b/package.json
@@ -7,18 +7,28 @@
     "start": "next start",
     "build": "next build",
     "lint": "next lint",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "update-envs": "vercel env pull .env.development.local",
+    "db:generate": "drizzle-kit generate:pg "
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.383.0",
+    "@aws-sdk/lib-storage": "^3.383.0",
     "@clerk/nextjs": "^4.23.1",
     "@types/node": "20.4.5",
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
+    "@vercel/postgres": "^0.4.1",
     "autoprefixer": "10.4.14",
+    "aws-cdk": "^2.89.0",
+    "aws-sdk": "^2.1428.0",
+    "aws-sdk-js-codemod": "^0.17.2",
+    "dotenv": "^16.3.1",
+    "drizzle-orm": "^0.27.2",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
     "eslint-plugin-simple-import-sort": "^10.0.0",
-    "multer": "1.4.5-lts.1",
+    "nanoid": "^4.0.2",
     "next": "13.4.12",
     "postcss": "8.4.27",
     "react": "18.2.0",
@@ -27,6 +37,7 @@
     "typescript": "5.1.6"
   },
   "devDependencies": {
+    "drizzle-kit": "^0.19.12",
     "prettier": "^3.0.0",
     "prettier-plugin-tailwindcss": "^0.4.1"
   }
