--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "aws-cdk": "^2.89.0",
     "aws-sdk": "^2.1428.0",
     "aws-sdk-js-codemod": "^0.17.2",
+    "classnames": "^2.3.2",
     "dotenv": "^16.3.1",
     "drizzle-orm": "^0.27.2",
     "eslint": "8.46.0",
