--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.4",
     "react-hot-toast": "^2.4.1",
+    "sharp": "^0.32.4",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   },
