Add components to tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,8 @@
     ],
     "paths": {
       "@/*": ["./src/*"],
-      "@actions/*": ["./src/app/actions/*"]
+      "@actions/*": ["./src/app/actions/*"],
+      "@components/*": ["./src/app/components/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
