--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     "@types/node": "20.4.5",
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
+    "@upstash/ratelimit": "^0.4.3",
+    "@upstash/redis": "^1.22.0",
     "@vercel/postgres": "^0.4.1",
     "autoprefixer": "10.4.14",
     "aws-cdk": "^2.89.0",
     "aws-sdk": "^2.1428.0",
     "aws-sdk-js-codemod": "^0.17.2",
+    "classnames": "^2.3.2",
     "dotenv": "^16.3.1",
     "drizzle-orm": "^0.27.2",
     "eslint": "8.46.0",
@@ -33,6 +36,9 @@
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.45.4",
+    "react-hot-toast": "^2.4.1",
+    "sharp": "^0.32.4",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   },
