--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,8 @@
     "paths": {
       "@/*": ["./src/*"],
       "@actions/*": ["./src/app/actions/*"],
-      "@components/*": ["./src/app/components/*"]
+      "@components/*": ["./src/components/*"],
+      "@ui": ["./src/ui/index.ts"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
