--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,8 @@
       "@/*": ["./src/*"],
       "@actions/*": ["./src/app/actions/*"],
       "@components/*": ["./src/components/*"],
-      "@ui": ["./src/ui/index.ts"]
+      "@ui": ["./src/ui/index.ts"],
+      "@utils": ["./src/utils/index.ts"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
