--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@aws-sdk/client-s3": "^3.383.0",
     "@aws-sdk/lib-storage": "^3.383.0",
     "@clerk/nextjs": "^4.23.1",
+    "@radix-ui/react-icons": "^1.3.0",
     "@types/node": "20.4.5",
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
