--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
     "lint": "next lint",
     "typecheck": "tsc --noEmit",
     "update-envs": "vercel env pull .env.development.local",
-    "db:generate": "drizzle-kit generate:pg"
+    "db:generate": "pnpm with-env prisma generate",
+    "db:push": "pnpm with-env prisma db push --skip-generate",
+    "db:pull": "pnpm with-env prisma db pull",
+    "studio": "pnpm with-env prisma studio --port 5555",
+    "with-env": "dotenv -e ../../.env.development.local --"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.433.0",
     "@aws-sdk/lib-storage": "^3.433.0",
     "@clerk/nextjs": "^4.25.6",
+    "@prisma/client": "5.4.2",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@types/node": "20.4.5",
@@ -48,6 +53,7 @@
   "devDependencies": {
     "drizzle-kit": "^0.19.13",
     "prettier": "^3.0.3",
-    "prettier-plugin-tailwindcss": "^0.4.1"
+    "prettier-plugin-tailwindcss": "^0.4.1",
+    "prisma": "^5.4.2"
   }
 }
