--- a/package.json
+++ b/package.json
@@ -9,45 +9,50 @@
     "lint": "next lint",
     "typecheck": "tsc --noEmit",
     "update-envs": "vercel env pull .env.development.local",
-    "db:generate": "drizzle-kit generate:pg"
+    "db:generate": "pnpm with-env prisma generate",
+    "db:push": "pnpm with-env prisma db push --skip-generate",
+    "db:pull": "pnpm with-env prisma db pull",
+    "studio": "pnpm with-env prisma studio --port 5555",
+    "with-env": "dotenv -e ./.env.development.local --"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.383.0",
-    "@aws-sdk/lib-storage": "^3.383.0",
-    "@clerk/nextjs": "^4.23.1",
+    "@aws-sdk/client-s3": "^3.433.0",
+    "@aws-sdk/lib-storage": "^3.433.0",
+    "@clerk/nextjs": "^4.25.6",
+    "@prisma/client": "5.4.2",
     "@radix-ui/react-icons": "^1.3.0",
-    "@radix-ui/react-tooltip": "^1.0.6",
+    "@radix-ui/react-tooltip": "^1.0.7",
     "@types/node": "20.4.5",
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
-    "@upstash/ratelimit": "^0.4.3",
-    "@upstash/redis": "^1.22.0",
-    "@vercel/postgres": "^0.4.1",
+    "@upstash/ratelimit": "^0.4.4",
+    "@upstash/redis": "^1.23.4",
+    "@vercel/postgres": "^0.4.2",
     "autoprefixer": "10.4.14",
-    "aws-cdk": "^2.89.0",
-    "aws-sdk": "^2.1428.0",
-    "aws-sdk-js-codemod": "^0.17.2",
+    "aws-cdk": "^2.102.0",
+    "aws-sdk": "^2.1478.0",
+    "aws-sdk-js-codemod": "^0.17.7",
     "classnames": "^2.3.2",
     "dotenv": "^16.3.1",
-    "drizzle-orm": "^0.27.2",
     "eslint": "8.46.0",
-    "eslint-config-next": "13.4.12",
+    "eslint-config-next": "13.5.6",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-unused-imports": "^3.0.0",
     "nanoid": "^4.0.2",
-    "next": "13.4.12",
+    "next": "13.5.6",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.45.4",
+    "react-hook-form": "^7.47.0",
     "react-hot-toast": "^2.4.1",
-    "sharp": "^0.32.4",
+    "sharp": "^0.32.6",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   },
   "devDependencies": {
-    "drizzle-kit": "^0.19.12",
-    "prettier": "^3.0.0",
-    "prettier-plugin-tailwindcss": "^0.4.1"
+    "prettier": "^3.0.3",
+    "prettier-plugin-tailwindcss": "^0.4.1",
+    "prisma": "^5.4.2",
+    "with-env": "^1.0.0"
   }
 }
